unpackaged/main/default/objects/User/fields/FalsePositives_Admin_Department_Type__c.field-meta.xml
<CustomField>
    <fullName>FalsePositives_Admin_Department_Type__c</fullName>
    <label>FalsePositives-Admin-Department-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department1</fullName>
            </value>
            <value>
                <fullName>Department2</fullName>
            </value>
            <value>
                <fullName>Department3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>