unpackaged/main/default/objects/User/fields/FalsePositives_Admin_Departments__c.field-meta.xml
<CustomField>
    <fullName>FalsePositives_Admin_Departments__c</fullName>
    <label>FalsePositives-Admin-Departments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>