unpackaged/main/default/objects/User/fields/FalsePositives_Admin_DepId__c.field-meta.xml
<CustomField>
    <fullName>FalsePositives_Admin_DepId__c</fullName>
    <displayFormat>{YYYY}{MM}-{0}</displayFormat>
    <label>FalsePositives-Admin-DepId</label>
    <type>AutoNumber</type>
</CustomField>