unpackaged/main/default/objects/User/fields/Lizard__c.field-meta.xml
<CustomField>
    <fullName>Lizard__c</fullName>
    <description>false positives testing</description>
    <label>Lizard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>